--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>products</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>products</name>
-	<description>API para controle de estacionamento de um condomínio</description>
+	<description>API para controle de estoque</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
