--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.h2.console.enabled=true
 spring.jpa.defer-datasource-initialization=true
+spring.security.user.name=lucas
+spring.security.user.password=1234
